fixed spacing on contact form page

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,3 @@
-section.pieces li {
-  padding-left: 0;
-  list-style: none; }
-  section.pieces li h2 {
-    text-transform: uppercase;
-    font-size: 2.5em; }
-  section.pieces li img {
-    float: left;
-    margin: 0 50px 0 0;
-    border: 1px solid #eee; }
-
-body {
-  width: 960px;
-  margin: auto; }
 @import url(http://fonts.googleapis.com/css?family=Istok+Web:400,700,400italic,700italic);
 @import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
 section.pieces {
@@ -139,7 +125,7 @@ section.cards {
   text-align: center;
   padding: 50px 0 50px 30px; }
   section.cards ul {
-    padding: 25px 0 25px 0; }
+    padding: 0; }
   section.cards li {
     list-style: none;
     padding-bottom: 20px; }
@@ -156,7 +142,7 @@ section.community.cards.right {
   section.community.cards.right h2 {
     text-align: center; }
   section.community.cards.right ul {
-    margin-left: -30px; }
+    margin-left: 15px; }
 
 #ch-card1:hover {
   content: url(../images/ch-card1.jpg); }
@@ -223,6 +209,12 @@ section > div > form {
   margin: 20px 200px;
   padding-top: 10px 0px;
   border: 4px solid brown; }
+
+li:nth-of-type(1) {
+  margin-left: 25px; }
+
+ol li:nth-of-type(2) {
+  margin: 12px 0 12px 35px; }
 
 body {
   width: 960px;
