--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -10,7 +10,7 @@ section.cards {
   padding: 50px 0 50px 30px;
 
   ul {
-    padding: 25px 0 25px 0;
+    padding: 0;
   }
   li {
     list-style: none;
@@ -37,7 +37,7 @@ section.community.cards.right
     text-align: center;
     }
   ul {
-  margin-left: -30px;
+  margin-left: 15px;
   }
 }
 
