--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -34,6 +34,22 @@ section > div > form
   margin: 20px 200px;
   padding-top: 10px 0px;
   border: 4px solid brown;
+}
 
+ol
+{
+
+}
+  li:nth-of-type(1)
+  {
+    margin-left: 25px;
+  }
+
+ol
+{
+  li:nth-of-type(2)
+  {
+    margin: 12px 0 12px 35px;
+  }
 }
 
